...
    if case .unsaved = self { return true }
    return false
  }

  var title: String {
    switch self {
    case .unsaved: "Could not save downloads"
    case .removalNotStarted(_, 1): "Could not remove download"
    case .removalNotStarted: "Could not remove downloads"
    }
  }

  var message: String {
...
